--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "console": "internalConsole",
       "stopOnEntry": false,
       "mainClass": "net.fabricmc.devlaunchinjector.Main",
-      "vmArgs": "-Dfabric.dli.config\u003dE:\\Minecraft@@0020Mods\\Java\\WynncraftEssentials\\.gradle\\loom-cache\\launch.cfg -Dfabric.dli.env\u003dclient -Dfabric.dli.main\u003dnet.fabricmc.loader.launch.knot.KnotClient",
+      "vmArgs": "-XX:+ShowCodeDetailsInExceptionMessages -Dfabric.dli.config\u003dE:\\Minecraft@@0020Mods\\Java\\WynncraftEssentials\\.gradle\\loom-cache\\launch.cfg -Dfabric.dli.env\u003dclient -Dfabric.dli.main\u003dnet.fabricmc.loader.launch.knot.KnotClient",
       "args": ""
     },
     {
@@ -20,8 +20,8 @@
       "console": "internalConsole",
       "stopOnEntry": false,
       "mainClass": "net.fabricmc.devlaunchinjector.Main",
-      "vmArgs": "-Dfabric.dli.config\u003dE:\\Minecraft@@0020Mods\\Java\\WynncraftEssentials\\.gradle\\loom-cache\\launch.cfg -Dfabric.dli.env\u003dserver -Dfabric.dli.main\u003dnet.fabricmc.loader.launch.knot.KnotServer",
-      "args": ""
+      "vmArgs": "-XX:+ShowCodeDetailsInExceptionMessages -Dfabric.dli.config\u003dE:\\Minecraft@@0020Mods\\Java\\WynncraftEssentials\\.gradle\\loom-cache\\launch.cfg -Dfabric.dli.env\u003dserver -Dfabric.dli.main\u003dnet.fabricmc.loader.launch.knot.KnotServer",
+      "args": "nogui"
     }
   ]
 }
