--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.15.2
-	yarn_mappings=1.15.2+build.15
-	loader_version=0.8.2+build.194
+	# check these on https://fabricmc.net/versions.html
+	minecraft_version=1.17
+	yarn_mappings=1.17+build.5
+	loader_version=0.11.3
 
 # Mod Properties
 	mod_version = 1.0.0
@@ -13,5 +13,5 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = wynncraft-essentials
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.10.7+build.309-1.15
+	# Fabric api
+	fabric_version=0.34.9+1.17
